[tool.poetry]
name = "reading-langchain"
version = "0.1.0"
description = ""
authors = ["Yuki Oshima <39944763+os1ma@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "reading_langchain"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.215"
openai = "^0.27.8"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
